--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -312,4 +312,100 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.jswz.[PROJECT]
+StoreVersion=1
+StoreVersionOffsetArmV7=0
+StoreVersionOffsetArm64=0
+StoreVersionOffsetX8664=0
+ApplicationDisplayName=
+VersionDisplayName=1.0
+MinSDKVersion=9
+TargetSDKVersion=26
+InstallLocation=InternalOnly
+bEnableGradle=True
+bEnableLint=False
+bPackageDataInsideApk=False
+bCreateAllPlatformsInstall=False
+bDisableVerifyOBBOnStartUp=False
+bAllowLargeOBBFiles=False
+bAllowPatchOBBFile=False
+bUseExternalFilesDir=False
+Orientation=Landscape
+MaxAspectRatio=2.100000
+bUseDisplayCutout=False
+AntVerbosity=Quiet
+bFullScreen=False
+bEnableNewKeyboard=True
+DepthBufferPreference=Default
+bValidateTextureFormats=True
+ExtraApplicationSettings=
+ExtraActivitySettings=
++ExtraPermissions=android.permission.INTERNET
+bAndroidVoiceEnabled=False
+bRemoveOSIG=False
++GoogleVRCaps=Daydream33
+bGoogleVRSustainedPerformance=False
+KeyStore=
+KeyAlias=
+KeyStorePassword=
+KeyPassword=
+bBuildForArmV7=True
+bBuildForArm64=False
+bBuildForX8664=False
+bBuildForES2=False
+bBuildForES31=True
+bSupportsVulkan=False
+bDetectVulkanByDefault=True
+bBuildWithHiddenSymbolVisibility=False
+bSaveSymbols=False
+bEnableGooglePlaySupport=False
+bUseGetAccounts=False
+GamesAppID=
+bEnableSnapshots=False
+bSupportAdMob=True
+AdMobAdUnitID=
+GooglePlayLicenseKey=
+GCMClientSenderID=
+bShowLaunchImage=True
+bAllowIMU=True
+bAllowControllers=True
+bBlockAndroidKeysOnControllers=False
+AndroidAudio=Default
+AudioSampleRate=44100
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=4
+AudioMaxChannels=0
+AudioNumSourceWorkers=0
+SpatializationPlugin=
+ReverbPlugin=
+OcclusionPlugin=
+CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
+bResampleForDevice=False
+MaxSampleRate=0.000000
+HighSampleRate=0.000000
+MedSampleRate=0.000000
+LowSampleRate=0.000000
+MinSampleRate=0.000000
+CompressionQualityModifier=0.000000
+AutoStreamingThreshold=0.000000
+AndroidGraphicsDebugger=None
+MaliGraphicsDebuggerPath=(Path="")
+bMultiTargetFormat_ETC1=True
+bMultiTargetFormat_ETC1a=True
+bMultiTargetFormat_ETC2=True
+bMultiTargetFormat_DXT=True
+bMultiTargetFormat_PVRTC=True
+bMultiTargetFormat_ATC=True
+bMultiTargetFormat_ASTC=True
+TextureFormatPriority_ETC1=0.100000
+TextureFormatPriority_ETC1a=0.150000
+TextureFormatPriority_ETC2=0.200000
+TextureFormatPriority_DXT=0.600000
+TextureFormatPriority_PVRTC=0.800000
+TextureFormatPriority_ATC=0.500000
+TextureFormatPriority_ASTC=0.900000
+SDKAPILevelOverride=
+NDKAPILevelOverride=
+
 
