--- a/XRDHTML.uproject
+++ b/XRDHTML.uproject
@@ -13,6 +13,12 @@
 			]
 		}
 	],
+	"Plugins": [
+		{
+			"Name": "WebBrowserWidget",
+			"Enabled": true
+		}
+	],
 	"TargetPlatforms": [
 		"Android",
 		"AllDesktop",
