Final Final Commit

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -34,7 +34,7 @@ InternationalizationPreset=English
 +CulturesToStage=en
 bCookAll=False
 bCookMapsOnly=False
-bCompressed=False
+bCompressed=True
 bEncryptIniFiles=False
 bEncryptPakIndex=False
 GenerateEarlyDownloaderPakFile=False
