--- a/XRDHTML.uproject
+++ b/XRDHTML.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.23",
+	"EngineAssociation": "{789E7EE9-4475-992B-F909-138F581AB381}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
